--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,23 @@
   --clr-grayish-blue: hsl(228, 12%, 48%);
   --clr-white: hsl(0, 0%, 100%);
 }
+
+body {
+  height: 100vh;
+}
+
+header {
+  background: url('../images/image-product-mobile.jpg') no-repeat center
+    center/cover;
+  width: 100%;
+  height: 300px;
+}
+
+a {
+  display: block;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
