--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root {
+  --clr-primary-500: hsl(158, 36%, 20%);
   --clr-primary-400: hsl(158, 36%, 37%);
   --clr-secondary-200: hsl(30, 38%, 92%);
 
@@ -77,12 +78,53 @@ h1 {
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
+  align-items: center;
+}
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.button {
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-flex;
+  gap: 0.75rem;
+  justify-content: center;
+  align-items: center;
+
+  border: 0;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1.5rem;
+  background-color: var(--clr-primary-400);
+  color: var(--clr-neutral-100);
+  font-weight: var(--fw-bold);
+  font-size: 0.925rem;
+  transition: background 0.3s;
+}
+
+.button:hover {
+  background-color: var(--clr-primary-500);
+}
+
+.button::before {
+  content: '';
+  width: 15px;
+  height: 16px;
+  background-image: url('../images/icon-cart.svg');
 }
 
 .product {
   --content-padding: 1.5rem;
   --content-spacing: 1rem;
 
+  display: grid;
   background-color: var(--clr-neutral-100);
   border-radius: 0.5rem;
   overflow: hidden;
@@ -111,4 +153,12 @@ h1 {
   font-family: var(--ff-accent);
   color: var(--clr-primary-400);
   align-items: center;
+}
+
+@media (min-width: 600px) {
+  .product {
+    --content-padding: 2rem;
+    grid-template-columns: 1fr 1fr;
+    max-width: 600px;
+  }
 }
